DEX-24580 | fix: elements alignment inside product cards

--- a/_src-lp/blocks/b-productswithselectors/b-productswithselectors.scss
+++ b/_src-lp/blocks/b-productswithselectors/b-productswithselectors.scss
@@ -25,7 +25,6 @@
   border-bottom: 1px solid #c5c5c5;
   margin: 10px;
   padding: 10px 0;
-  min-height: 11em;
 }
 
 .b-productswithselectors > div:not(:first-child) ul:nth-of-type(2) {
@@ -68,7 +67,7 @@
     width:100px;
     height: 245px;
     position: absolute;
-    top: -45px;
+    top: -48px;
     right: -6px;
     background: url('../../images/new_redtag.png') 0 0 no-repeat transparent;
     background-size: 100%;
@@ -190,7 +189,8 @@
   }
 }
 
-.hide-btn-2 .b-productswithselectors .prices_box .buy_box2 a.red-buy-button {
+.hide-btn-1 .b-productswithselectors .prices_box .buy_box1 a.red-buy-button, .hide-btn-2 .b-productswithselectors .prices_box .buy_box2 a.red-buy-button {
+  display: inline-block;
   visibility: hidden;
 }
 
